--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
@@ -7,13 +7,13 @@
 			 xmlns:components1="net.vdombox.ide.common.view.components.*"
 			 creationComplete="creationCompleteHandler()" 
 			 remove="sparkskin1_removeHandler(event)">
-
+	
 	<fx:Metadata>
 		<![CDATA[ 
-			[HostComponent("net.vdombox.ide.modules.tree.view.components.WorkArea")]
+		[HostComponent("net.vdombox.ide.modules.tree.view.components.WorkArea")]
 		]]>
 	</fx:Metadata>
-
+	
 	<fx:Script>
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
@@ -23,7 +23,7 @@
 			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
 			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 			import net.vdombox.ide.modules.tree.events.WorkAreaEvent;
-
+			
 			private var isExpanded : Boolean;
 			
 			[Bindable]
@@ -35,12 +35,12 @@
 			private var multiRect : Rect = new Rect();
 			
 			private var pt:Point = new Point();
-
+			
 			private function creationCompleteHandler() : void
 			{
 				isExpanded = false;
 				expandAllButton.label = resourceManager.getString( 'Tree_General', 'work_area_expand_all' );
-
+				
 				BindingUtils.bindSetter( allExpandedChanged, hostComponent, "isAllExpanded", true );
 				BindingUtils.bindSetter( allExpandedChanged, hostComponent, "isAllCollapsed", true );
 				
@@ -48,25 +48,25 @@
 				
 				multiRect.stroke =  new SolidColorStroke( 0x0000FF, 1 );
 			}
-
+			
 			private function allExpandedChanged( value : Boolean ) : void
 			{
 				var oldIsExpanded : Boolean = isExpanded;
-
+				
 				if ( !hostComponent.isAllExpanded && hostComponent.isAllCollapsed )
 					isExpanded = false;
 				else
 					isExpanded = true;
-
+				
 				if ( oldIsExpanded == isExpanded )
 					return;
-
+				
 				if ( isExpanded )
 					expandAllButton.label = resourceManager.getString( 'Tree_General', 'work_area_collapse_all' );
 				else
 					expandAllButton.label = resourceManager.getString( 'Tree_General', 'work_area_expand_all' );
 			}
-
+			
 			private function expandAllButton_clickHandler() : void
 			{
 				if ( isExpanded )
@@ -74,14 +74,14 @@
 				else
 					hostComponent.dispatchEvent( new WorkAreaEvent( WorkAreaEvent.EXPAND_ALL ) );
 			}
-
+			
 			protected function showSignatureButton_clickHandler() : void
 			{
 				if ( hostComponent.isSignatureShowed )
 					hostComponent.dispatchEvent( new WorkAreaEvent( WorkAreaEvent.HIDE_SIGNATURE ) );
 				else
 					hostComponent.dispatchEvent( new WorkAreaEvent( WorkAreaEvent.SHOW_SIGNATURE ) );
-
+				
 				hostComponent.isSignatureShowed = !hostComponent.isSignatureShowed;
 			}
 			
@@ -213,29 +213,29 @@
 			
 		]]>
 	</fx:Script>
-
+	
 	<s:states>
-
+		
 		<s:State name="normal"/>
 		<s:State name="unsaved"/>
 		<s:State name="disabled"/>
 	</s:states>
-
+	
 	<s:Rect id="backgroundRect"
 			bottom="0" left="0" right="0" top="0">
-
+		
 		<s:fill>
-
+			
 			<s:SolidColor color="gray"
 						  alpha=".5"/>
 		</s:fill>
-
+		
 		<s:stroke>
-
+			
 			<s:SolidColorStroke/>
 		</s:stroke>
 	</s:Rect>
-
+	
 	<s:Rect height="20"
 			left="1" right="1" top="1">
 		<s:fill>
@@ -245,43 +245,43 @@
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
-
+	
 	<s:HGroup height="20"
 			  left="1" right="1" top="1"
 			  gap="0">
-
+		
 		<button:WorkAreaButton id="saveButton"
-								   enabled="true" enabled.disabled="false" height="20" icon="{VDOMImage.Save}"
-								   label="{ resourceManager.getString( 'Tree_General', 'work_area_save' ) }"
-								   highlighted="false" highlighted.unsaved="true"/>
-
+							   enabled="true" enabled.disabled="false" height="20" icon="{VDOMImage.Save}"
+							   label="{ resourceManager.getString( 'Tree_General', 'work_area_save' ) }"
+							   highlighted="false" highlighted.unsaved="true"/>
+		
 		<button:WorkAreaButton id="undoButton"
-								   enabled="false" enabled.unsaved="true" height="20" icon="{VDOMImage.Undo}" visible="false"
-								   label="{ resourceManager.getString( 'Tree_General', 'work_area_undo' ) }"/>
-
+							   enabled="false" enabled.unsaved="true" height="20" icon="{VDOMImage.Undo}" visible="false"
+							   label="{ resourceManager.getString( 'Tree_General', 'work_area_undo' ) }"/>
+		
 		<mx:Spacer width="100%"/>
 		
-		<!--<button:WorkAreaButton id="setHome"
-								   height="20" icon="@Embed('assets/home.png')" label="{ resourceManager.getString( 'Tree_General', 'properties_panel_btn_start' ) }"
-								   click="hostComponent.dispatchEvent( new WorkAreaEvent ( WorkAreaEvent.SET_START ) )"/>
-
+		<button:WorkAreaButton id="setHome"
+							   height="20" icon="@Embed('assets/home.png')" label="{ resourceManager.getString( 'Tree_General', 'properties_panel_btn_start' ) }"
+							   click="hostComponent.dispatchEvent( new WorkAreaEvent ( WorkAreaEvent.SET_START ) )"/>
+		
 		<button:WorkAreaButton id="newPageButton"
-								   height="20" icon="@Embed('assets/new.png')" label="{ resourceManager.getString( 'Tree_General', 'work_area_new_page' ) }"
-								   click="hostComponent.dispatchEvent( new WorkAreaEvent( WorkAreaEvent.CREATE_PAGE ) )"/> -->
-
+							   height="20" icon="@Embed('assets/new.png')" label="{ resourceManager.getString( 'Tree_General', 'work_area_new_page' ) }"
+							   click="hostComponent.dispatchEvent( new WorkAreaEvent( WorkAreaEvent.CREATE_PAGE ) )"/>
+		
 		<button:WorkAreaButton id="autoSpaceingButton"
-								   height="20" icon="@Embed('assets/spacing.png')" label="{ resourceManager.getString( 'Tree_General', 'work_area_auto_spacing' ) }"
-								   click="hostComponent.dispatchEvent( new WorkAreaEvent( WorkAreaEvent.AUTO_SPACING ) )"/>
-
+							   height="20" icon="@Embed('assets/spacing.png')" label="{ resourceManager.getString( 'Tree_General', 'work_area_auto_spacing' ) }"
+							   click="hostComponent.dispatchEvent( new WorkAreaEvent( WorkAreaEvent.AUTO_SPACING ) )"/>
+		
 		<button:WorkAreaButton id="expandAllButton"
-								   height="20" icon="@Embed('assets/expand.png')"
-								   click="expandAllButton_clickHandler()"/>
-
+							   height="20" icon="@Embed('assets/expand.png')"
+							   click="expandAllButton_clickHandler()"/>
+		
 		<button:WorkAreaButton id="showSignatureButton"
-								   height="20" icon="@Embed('assets/signature.png')" label="{ hostComponent.isSignatureShowed ? resourceManager.getString( 'Tree_General', 'work_area_hide_signature' ) : resourceManager.getString( 'Tree_General', 'work_area_show_signature' ) }"
-								   click="showSignatureButton_clickHandler()"/>
+							   height="20" icon="@Embed('assets/signature.png')" label="{ hostComponent.isSignatureShowed ? resourceManager.getString( 'Tree_General', 'work_area_hide_signature' ) : resourceManager.getString( 'Tree_General', 'work_area_show_signature' ) }"
+							   click="showSignatureButton_clickHandler()"/>
 	</s:HGroup>
-
+	
 	<s:Group id="workLayers"
 			 bottom="0" left="0" right="0" top="22">
 		<s:Rect height="100%" width="100%">
@@ -289,11 +289,11 @@
 				<s:BitmapFill source = "{VDOMImage.BG_WorkArea}" smooth="true" fillMode="repeat"/>
 			</s:fill>
 		</s:Rect>
-
+		
 		<components1:VDOMScroller id="scroller"
-					height="100%" width="100%" creationComplete="scroller_creationCompleteHandler(event)"
-					updateComplete="scroller_updateCompleteHandler(event)">
-				
+								  height="100%" width="100%" creationComplete="scroller_creationCompleteHandler(event)"
+								  updateComplete="scroller_updateCompleteHandler(event)">
+			
 			<s:Group id="scaleGroup" scaleX="{scale}" scaleY="{scale}">
 				<s:Group id="linkagesLayer"/>
 				<s:Group id="contentGroup"/>
