--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -5,7 +5,7 @@
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  height="100%" width="100%" gap="0" 
 		  xmlns:panels="net.vdombox.ide.modules.wysiwyg.view.components.panels.*">
-
+	
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.wysiwyg.view.components.TypesAccordionHeader;
@@ -13,7 +13,7 @@
 	</fx:Script>
 	
 	<panels:ToolBoxPanel id="toolbox" width="127" height="100%" />
-		
+	
 	<s:Rect width="5" height="100%">
 		<s:fill>
 			<s:SolidColor color="#424242"/>
@@ -28,28 +28,31 @@
 			<s:SolidColor color="#424242"/>
 		</s:fill>
 	</s:Rect>
-
+	
 	<s:Group height="100%" width="228">
 		<mx:VDividedBox height="100%" width="228"
 						dividerSkin="net.vdombox.ide.common.view.skins.DividerSkin">
 			
 			<panels:ObjectAttributesPanel id="objectAttributesPanel"
-										  width="100%" height="60%"
+										  width="100%" height="50%"
 										  backgroundAlpha="0" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
 										  title="{ resourceManager.getString( 'Wysiwyg_General', 'object_attributes_panel_title') }" borderAlpha="0" borderVisible="false"/>
 			
-			<panels:HelpPanel id="helpPanel"
-							  width="100%"
-							  backgroundAlpha="0" cornerRadius="5" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
-							  title="{ resourceManager.getString( 'Wysiwyg_General', 'help_panel_title') }" borderAlpha="0" borderVisible="false"/>
-			
-			
-			<panels:ObjectsTreePanel id="objectsTreePanel"
-									 width="100%" height="40%"
-									 backgroundAlpha="1" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
-									 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }" borderAlpha="0" borderVisible="false"/>
-			
-			
+			<mx:VDividedBox height="50%" width="228"
+							dividerSkin="net.vdombox.ide.common.view.skins.DividerSkin">
+				
+				<panels:HelpPanel id="helpPanel"
+								  width="100%"
+								  backgroundAlpha="0" cornerRadius="5" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
+								  title="{ resourceManager.getString( 'Wysiwyg_General', 'help_panel_title') }" borderAlpha="0" borderVisible="false"/>
+				
+				
+				<panels:ObjectsTreePanel id="objectsTreePanel"
+										 width="100%" height="100%"
+										 backgroundAlpha="1" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
+										 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }" borderAlpha="0" borderVisible="false"/>
+				
+			</mx:VDividedBox>
 		</mx:VDividedBox>
 		
 		<s:Line left="0" height="100%">
