git-svn-id: http://svn.vdombox.ru/flextools/trunk@8418 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/ScriptStructureWindowSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/ScriptStructureWindowSkin.mxml
@@ -87,7 +87,7 @@
 				var sortField : SortField = new SortField( "@pos" );
 				sortField.numeric = true;
 				
-				structureXMLList = XMLUtils.sortElementsInXMLList( tempXMLList, sortField );
+				structureXMLList = XMLUtils.sortElementsInXMLList( tempXMLList, [ sortField ] );
 			    saveXMLList = structureXMLList.copy();
 			}
 			
