--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/ResourcePreviewWindowSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/ResourcePreviewWindowSkin.mxml
@@ -102,7 +102,7 @@
 								  width="14" height="16"
 								  toolTip="Copy"
 								  skinClass="net.vdombox.ide.common.view.skins.button.CopyResourceIdBtnSkin"
-								  click="hostComponent.copyResourceID()"
+								  mouseDown="hostComponent.copyResourceID()"
 								  buttonMode="true"
 								  tabEnabled="false"
 								  focusEnabled="false"
