git-svn-id: http://svn.vdombox.ru/flextools/trunk@8420 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
@@ -86,13 +86,13 @@
 					}
 				}
 			}
-			
-			private function keyDownEnterHandler( event : KeyboardEvent ) : void
+
+			protected function lbl_keyDownHandler(event:KeyboardEvent):void
 			{
 				if ( event.keyCode == Keyboard.ENTER )
 					changeHandler();
 			}
-
+			
 		]]>
 	</fx:Script>
 	<s:Group toolTip="{_value}">
@@ -104,7 +104,7 @@
 		
 		<s:TextInput id="lbl" textAlign="left"
 					 text="{_value}" width="100%" height="100%"
-					 keyDown="keyDownEnterHandler(event)" focusOut="changeHandler()"
+					 keyDown="lbl_keyDownHandler(event)" focusOut="changeHandler()"
 					 creationComplete="eventCompleleHandler(event)"/>
 	</s:Group>
 	
