--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
@@ -74,7 +74,7 @@
 						{
 							parent.appendChild( newChild[i] );
 							oldChild += newChild[i];
-							XMLUtils.sortElementsInXML( parent, new SortField("@name") );
+							XMLUtils.sortElementsInXML( parent, [ new SortField("@name") ] );
 							
 						}
 					}
