--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ToolbarPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ToolbarPanel.mxml
@@ -33,6 +33,8 @@
 				_selectedRenderer = value;
 
 				isSelectedRendererChanged = true;
+				
+				closeToolBar();
 			}
 
 			public function get currentToolbar() : IToolbar
@@ -63,14 +65,6 @@
 					return;
 				
 				isSelectedRendererChanged = false;
-				
-				if ( _currentToolbar )
-				{
-					_currentToolbar.close();
-					_currentToolbar = null;
-					
-					removeAllElements();
-				}
 				
 				if( !_selectedRenderer || !_selectedRenderer.editableComponent )
 					return;
@@ -120,6 +114,17 @@
 				
 				visible = currentToolbar ? true : false;
 				includeInLayout = currentToolbar ? true : false;
+			}
+			
+			private function closeToolBar() : void
+			{
+				if ( _currentToolbar )
+				{
+					_currentToolbar.close();
+					_currentToolbar = null;
+					
+					removeAllElements();
+				}
 			}
 			
 			public function setTransformMarket() : void
