--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -364,7 +364,7 @@
 
 	<s:Group id="groupPageRenderer" height="100%" width="100%" clipAndEnableScrolling="false">
 		<components:PageRenderer id="renderer" 
-								 height="100%" width="100%"
+								 top="0" bottom="0" left="0" right="0"
 								 selectedRenderer="{ selectedRenderer }" includeIn="wysiwyg, wysiwygDisabled, normal, disabled" 
 								 mouseMove="mouseMoveOnPageRenderer(event)"/>
 
