git-svn-id: http://svn.vdombox.ru/flextools/trunk@8425 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/FindTreeItemRenderer.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/FindTreeItemRenderer.mxml
@@ -47,7 +47,7 @@
 							
 						case "script":
 						{
-							icon = VDOMImage.Arraw_Right_Yellow;
+							icon = VDOMImage.Arraw_Right_Blue;
 							break;
 						}
 							
