git-svn-id: http://svn.vdombox.ru/flextools/trunk@8432 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/TypeEditor.mxml
+++ b/TypeEditor/v.02/src/TypeEditor.mxml
@@ -13,6 +13,25 @@
 		<!-- Place non-visual elements (e.g., services, value objects)  -->
 	</fx:Declarations>
 	
+	<fx:Style>
+		@namespace s "library://ns.adobe.com/flex/spark";
+		@namespace mx "library://ns.adobe.com/flex/mx";
+		@namespace ns "net.vdombox.object_editor.view.essence.*";
+		@namespace vs "net.vdombox.object_editor.view.*";
+		@namespace local "*";
+		@namespace containers "flexlib.containers.*";
+		
+		s|TextInput
+		{
+			skinClass : ClassReference("net.vdombox.object_editor.view.TextInputSkin");
+		}
+		
+		s|TextArea
+		{
+			skinClass : ClassReference("net.vdombox.object_editor.view.TextAreaSkin");
+		}
+	</fx:Style>
+	
 <fx:Script>
 	<![CDATA[	
 		import org.puremvc.as3.patterns.facade.Facade;
