--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
@@ -52,7 +52,7 @@
 		<s:Button label="Save"		id="saveObjectTypeButton"				enabled="{isEnabled}"/>
 		<s:Button label="Save as"	id="saveAsObjectTypeButton"				enabled="{isEnabled}"/>
 		<s:Button label="connect"	id="connectObjectTypeToServerButton"	/>
-		<s:Button label="load"		id="loadObjectTypeToServerButton"		enabled="false"/>
+		<s:Button label="load"		id="loadObjectTypeToServerButton"		enabled="{!isEnabled}"/>
 		<s:Button label="Reload"	id="restartButton"						enabled="{isEnabled}"/>
 	</s:HGroup>	
 </mx:VBox>
