--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
@@ -88,7 +88,7 @@
 					<mx:Form  width="100%" height="100%"  paddingTop="0" paddingLeft="0" >
 						
 						<mx:FormItem label="MethodName:" toolTip="Name">
-							<mx:TextInput id="methodName" width="150" change="{changeField()}"/>
+							<s:TextInput id="methodName" width="150" change="{changeField()}"/>
 						</mx:FormItem>				
 						<mx:FormItem label="Description:" toolTip="Name">
 							<ns2:LangTextArea id="description" width="150" height="40" change="{changeField()}"/>
@@ -120,11 +120,11 @@
 						<mx:FormHeading fontSize="10"  label="Parameters detais:" paddingTop="0" />
 						
 						<mx:FormItem label="ScriptName:" toolTip="Это VbType">
-							<mx:TextInput id="parScriptName" width="200" change="{changeField()}"/>
+							<s:TextInput id="parScriptName" width="200" change="{changeField()}"/>
 						</mx:FormItem>
 						
 						<mx:FormItem label="DefaultValue:" toolTip="Имя объекта">
-							<mx:TextInput id="parDefaultValue" width="200" change="{changeField()}"/>
+							<s:TextInput id="parDefaultValue" width="200" change="{changeField()}"/>
 						</mx:FormItem>
 						
 						<mx:FormItem label="Help:" toolTip="Это Help">
@@ -134,7 +134,7 @@
 						</mx:FormItem>
 						
 						<mx:FormItem label="Interface:" toolTip="Это ордер">
-							<mx:TextInput id="parInterface" width="200" change="{changeField()}"/>
+							<s:TextInput id="parInterface" width="200" change="{changeField()}"/>
 						</mx:FormItem>
 						
 						<mx:FormItem label="InterfaceName:" toolTip="Это VbType">
