--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/TextInputSkin.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/TextInputSkin.mxml
@@ -39,6 +39,8 @@
 			import net.vdombox.object_editor.Utils.WindowManager;
 			import net.vdombox.object_editor.event.StringAttributeEditWindowEvent;
 			import net.vdombox.object_editor.view.popups.StringAttributeEditWindow;
+			
+			import spark.events.TextOperationEvent;
         
         private var paddingChanged:Boolean;
         
@@ -206,6 +208,7 @@
 			function applyHandler( event : StringAttributeEditWindowEvent ) : void
 			{
 				hostComponent.text = event.value;
+				hostComponent.dispatchEvent( new TextOperationEvent ( Event.CHANGE ) );
 				WindowManager.getInstance().removeWindow( stringAttributeEditWindow );
 			}
 			
